--- a/src/app/views/login/login.html
+++ b/src/app/views/login/login.html
@@ -1,10 +1,19 @@
-<h2>Iniciar sesión</h2>
+<div class="d-flex justify-content-center align-items-center" style="height:100vh;">
+  <div class="container-box" style="width: 350px;">
+      <h2 class="text-center mb-4">Iniciar Sesión</h2>
 
-<input [(ngModel)]="username" placeholder="Usuario">
-<input [(ngModel)]="password" placeholder="Contraseña" type="password">
+      <div class="mb-3">
+        <label class="form-label">Usuario</label>
+        <input class="form-control" [(ngModel)]="username" placeholder="Ingresa tu usuario">
+      </div>
 
-<br><br>
+      <div class="mb-3">
+        <label class="form-label">Contraseña</label>
+        <input type="password" class="form-control" [(ngModel)]="password" placeholder="Ingresa tu contraseña">
+      </div>
 
-<button (click)="login()">Ingresar</button>
+      <button class="btn btn-primary w-100" (click)="login()">Ingresar</button>
 
-<p *ngIf="errorMsg" style="color:red">{{ errorMsg }}</p>
+      <p *ngIf="errorMsg" class="text-danger text-center mt-3">{{ errorMsg }}</p>
+  </div>
+</div>
